<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_search_books"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/search_button"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_weight="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.fabrk.booklisting.booksearch.BookListActivity"
    tools:showIn="@layout/activity_search_books">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/empty_view"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_book_black" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/error_message_text_size" />

    </FrameLayout>

    <ListView
        android:id="@+id/books_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/book_item" />


</FrameLayout>
